Fixing alignments and mocking up Google Maps integration

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -22,6 +22,7 @@ main {
     background: url('../img/union-softblur.jpg') no-repeat 50% 50% fixed;
     background-size: cover;
     color: #FFF;
+    padding-top: 6em;
 }
 
 .rainbow {
@@ -57,16 +58,15 @@ main {
 }
 
 .next-meeting {
-    padding-top: 2em;
-
     .date, .location {
         border-bottom: 1px dotted color('osu-blue', 'darken-2');
         color: color('osu-blue', 'darken-2');
+        white-space: nowrap;
     }
 
     &.inverted {
         color: #FFF;
-        
+
         .date, .location {
             border-bottom: 1px dotted color('osu-blue', 'lighten-2');
             color: color('osu-blue', 'lighten-2');
@@ -113,15 +113,25 @@ label[for="email2"].active:before, label[for="email"].active:before {
 .osu-navbar {
     background: #333 url(http://brand.osu.edu/assets/site/osu_navbar/images/white/bg-navbar_red.png) center bottom repeat-x;
     height: 42px;
-    padding: 12px 0;
-}
+    padding: 10px 0;
 
-.osu-navbar a {
-    height: 16px;
-    width: 80px;
-    display: block;
-    text-indent: -9999px;
-    background: url(http://brand.osu.edu/assets/site/osu_navbar/images/white/osu_name.png) 0 0 no-repeat;
+    a.logo {
+        height: 16px;
+        width: 80px;
+        display: block;
+        text-indent: -9999px;
+        background: url(http://brand.osu.edu/assets/site/osu_navbar/images/white/osu_name.png) 0 2px no-repeat;
+    }
+
+    div > a { 
+        color: white;
+        padding: 0 0.5em;
+        font-size: 0.85em;
+
+        &:hover, &:active {
+            text-decoration: underline;
+        }
+    }
 }
 
 
@@ -130,6 +140,7 @@ footer.page-footer {
     background: #333;
     color: #FFF;
     margin-top: 0;
+    padding: 2.5em 0;
 
     a {
         color: #FFF;
@@ -149,4 +160,29 @@ footer.page-footer {
             padding: 0 0.5em;
         }
     }
+
+    .row {
+        margin: 0;
+    }
+}
+
+// Mockup for an embedded google map of the next meeting
+.map-mockup {
+    background: url('../img/directions-mockup.png') no-repeat 50% 50%;
+    background-size: cover;
+
+    min-height: 400px;
+    padding: 2em;
+
+    img {
+        float: left;
+    }
+
+}
+
+// Reflow rows to have top margin instead of bottom
+// Works a bit better when rendered under a hero 
+.row {
+    margin-bottom: 0;
+    margin-top: 20px;
 }
